Update backend: API key loading, db path fix, improved error handling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitcoin-address-server",
+  "name": "sats-stacker-backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
