--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "sqlite3": "^5.1.7"
   }
 }
