--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
-    "sqlite3": "^5.1.7"
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.7",
+    "url": "^0.11.4"
   }
 }
